--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "fomo-fights",
-  "homepage": "https://ishavlovsky.github.io/wallet-test/",
+  "name": "wallet-test",
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "packageManager": "pnpm@9.14.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -11,7 +11,8 @@
     "lint:css": "stylelint '**/*.css' --fix",
     "check": "tsc --noEmit",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "clean": "mkdir -p dist && rm -rf dist/*"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -20,10 +21,12 @@
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "^2.0.0-beta.25",
     "@eslint/js": "^9.11.1",
     "@stylistic/eslint-plugin": "^2.8.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@svgr/plugin-svgo": "^8.1.0",
+    "@types/chrome": "^0.0.277",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
