--- a/package.json
+++ b/package.json
@@ -14,21 +14,38 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "@metamask/browser-passworder": "^5.0.1",
+    "@metamask/obs-store": "^9.0.0",
+    "@rabby-wallet/eth-coinbase-keyring": "^0.0.0-beta.0",
+    "@rabby-wallet/eth-hd-keyring": "^4.3.2",
+    "@rabby-wallet/eth-simple-keyring": "^5.0.1",
+    "@rabby-wallet/eth-walletconnect-keyring": "^2.1.4",
+    "@rabby-wallet/eth-watch-keyring": "^1.0.0",
+    "@scure/bip39": "^1.4.0",
+    "@sentry/browser": "^6.7.2",
+    "debounce": "^1.2.1",
+    "ethereumjs-util": "^7.1.5",
+    "koa-compose": "^4.1.0",
+    "loglevel": "^1.9.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^6.26.2",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "webextension-polyfill": "^0.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@stylistic/eslint-plugin": "^2.8.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@svgr/plugin-svgo": "^8.1.0",
+    "@types/debounce": "^1.2.4",
+    "@types/koa-compose": "^3.2.8",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.13",
+    "@types/webextension-polyfill": "^0.12.1",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
     "@vitejs/plugin-react": "^4.3.1",
